--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,22 @@
   --foreground: #171717;
 }
 
+* {
+  font-family: var(--font-manrope);
+}
+
+h1 {
+  @apply text-[2.25rem] md:text-[3rem] tracking-tight font-semibold leading-[1.2] text-center
+}
+
+h2 {
+  @apply text-[1.75rem] md:text-[2.5rem] leading-[1.25] font-semibold
+}
+
+p {
+  @apply text-[1rem] tracking-normal text-[#9e9e9e] max-w-[20em] md:max-w-[40em]
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -17,11 +33,16 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+
+  .container {
+    @apply lg:max-w-[90em] mx-auto
   }
 }
