--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,12 @@ h3,
 h4,
 h5,
 h6,
-span,button {
+span {
   font-family: var(--bricolage-font);
+}
+
+button{
+  font-family: var(--manrope-font);
 }
 
 h1 {
