--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@ h4,
 h5,
 h6,
 span {
-  font-family: var(--denton-font);
+  font-family: var(--syne-font);
 }
 
 button {
@@ -26,15 +26,15 @@ button {
 }
 
 h1 {
-  @apply text-[2.25rem] md:text-[3rem] tracking-normal leading-[1.2] md:max-w-[10em]
+  @apply text-[2.25rem] leading-[1.2] tracking-normal md:max-w-[10em] md:text-[3rem];
 }
 
 h2 {
-  @apply text-[1.75rem] md:text-[2.5rem] leading-[1.25]
+  @apply text-[1.75rem] leading-[1.25] md:text-[2.5rem];
 }
 
 p {
-  @apply text-[1rem] text-[#9e9e9e] md:max-w-[40em] font-normal
+  @apply text-[1rem] font-normal text-[#9e9e9e] md:max-w-[40em];
 }
 
 @media (prefers-color-scheme: dark) {
@@ -47,7 +47,6 @@ p {
 body {
   color: var(--foreground);
   background: var(--background);
-
 }
 
 @layer utilities {
@@ -55,9 +54,8 @@ body {
     text-wrap: balance;
   }
 
-
   .container {
-    @apply lg:max-w-[90em] mx-auto px-[1rem]
+    @apply mx-auto px-[1rem] lg:max-w-[90em];
   }
 }
 
