--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,15 @@ span {
   font-family: var(--syne-font);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+
 button {
   font-family: var(--manrope-font);
 }
