--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,37 +4,44 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #0c0c0c;
 }
 
 * {
   font-family: var(--manrope-font);
 }
 
+
+
 h1,
 h2,
-h3,
 h4,
 h5,
 h6,
 span {
-  font-family: var(--denton-font);
+  font-family: var(--syne-font);
 }
 
-button {
+button,
+p,
+h3 {
   font-family: var(--manrope-font);
 }
 
 h1 {
-  @apply text-[2.25rem] md:text-[3rem] tracking-normal leading-[1.2] md:max-w-[10em]
+  @apply text-[2.25rem] leading-[40px] md:text-[3.5rem] -tracking-[0.5px] md:leading-[60px] font-semibold text-center lg:max-w-[45rem]
 }
 
 h2 {
-  @apply text-[1.75rem] md:text-[2.5rem] leading-[1.25]
+  @apply text-[1.5rem] md:text-[2.5rem] leading-[1.25] text-center max-w-[1194px] font-semibold
+}
+
+.sub-heading {
+  @apply text-[0.75rem] md:text-[0.875rem] uppercase tracking-[4px] md:tracking-[6px] font-extrabold text-[#B4E251] text-center
 }
 
 p {
-  @apply text-[1rem] text-[#9e9e9e] md:max-w-[40em] font-normal
+  @apply text-[1rem] text-[#f5f5f5] md:max-w-[40em] font-normal
 }
 
 @media (prefers-color-scheme: dark) {
@@ -55,11 +62,25 @@ body {
     text-wrap: balance;
   }
 
-
   .container {
-    @apply lg:max-w-[90em] mx-auto px-[1rem]
+    @apply lg:max-w-[1440px] mx-auto px-[1rem]
   }
 }
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
+
 
 @layer base {
   /* :root {
