--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #0c0c0c;
+  --foreground: #ffffff;
+  --background: #0c0c0c;
 }
 
 * {
@@ -45,12 +45,7 @@ p {
   @apply text-[1rem] text-[#f5f5f5] md:max-w-[40em] font-normal
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
   color: var(--foreground);
